Construção do formulário

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Formulário</h1>
-        <span></span>
+        <span>Sequência do formulário</span>
         
     </div>
     
